# taekwondo-server

./: Cargo.lock.old  Cargo.toml  Procfile  README.md  permissions.rs
migrations/20170204115653_create_users/: up.sql
migrations/20170214134321_create_permissions/: up.sql
migrations/20170408114705_create_locations/: down.sql  up.sql
migrations/20170411163312_simplify_access_control/: down.sql  up.sql
migrations/20170411201201_restrict_latlng/: down.sql  up.sql
migrations/20170412095313_unique_instructor_assignments/: down.sql  up.sql
migrations/20170625010339_case_insensitive/: down.sql  up.sql
migrations/20170625025431_case_insensitive_user/: down.sql  up.sql
src/: auth.rs  conditions.rs  config.rs  database.rs  main.rs  schema.rs
src/email/: mod.rs  reset_password.html
src/routes/: auth.rs  mod.rs  query.rs
